update title & description

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Lucas P Dev",
-  "name": "Lucas Piedrahita Portfolio",
+  "short_name": "LucasP.dev",
+  "name": "Lucas Piedrahita | Front-End Developer",
   "icons": [
     {
       "src": "favicon.ico",
